--- a/CEO-Referencement/TP2/css/style.css
+++ b/CEO-Referencement/TP2/css/style.css
@@ -500,24 +500,44 @@ img {
   width: 100%;
 }
 
-/* line 23, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 22, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+a {
+  text-decoration: none;
+}
+
+/* line 25, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+a:hover {
+  text-decoration: underline;
+}
+
+/* line 28, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+a:active {
+  text-decoration: none;
+}
+
+/* line 31, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+a:visited {
+  text-decoration: none;
+}
+
+/* line 36, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav {
   color: #FFFFFF;
 }
 
-/* line 25, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 38, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav img {
   height: 45px;
   width: auto;
 }
 
-/* line 29, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 42, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav h1 {
   text-align: center;
   font-size: 1em;
 }
 
-/* line 34, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 47, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav .icon {
   display: flex;
   flex-direction: row;
@@ -525,39 +545,40 @@ nav .icon {
   align-items: center;
 }
 
-/* line 40, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 53, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav .meteo {
   display: none;
 }
 
-/* line 43, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 56, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav .icon a:first-child {
   margin-right: 10px;
 }
 
-/* line 46, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 59, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav .icon a:last-child {
   margin-left: 10px;
 }
 
-/* line 49, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 62, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 nav p {
+  font-size: 1.5em;
   margin-bottom: 0;
 }
 
 /*FIN CSS barre de navigation*/
 /*CSS Du corps de la page*/
-/* line 57, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 71, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 html, body {
   height: 95%;
 }
 
-/* line 59, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 73, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 html .container_body, body .container_body {
   height: 100%;
 }
 
-/* line 64, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 78, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 body {
   background: url("../image/lauzanne_img.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -568,19 +589,19 @@ body {
 }
 
 /*CSS des reseau sociaux*/
-/* line 74, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 88, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 p {
   font-family: Flaticon;
 }
 
-/* line 77, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 91, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 .reseaux_sociaux {
   display: none;
 }
 
 /*FIN CSS des reseau sociaux*/
 /*CSS des liens du bas*/
-/* line 84, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 98, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 .container_body {
   width: 100%;
   display: flex;
@@ -588,13 +609,13 @@ p {
   flex-direction: column;
 }
 
-/* line 89, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 103, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 .container_body .link_bottom {
   display: flex;
   justify-content: center;
 }
 
-/* line 95, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 109, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 ul {
   display: flex;
   flex-direction: column;
@@ -605,14 +626,14 @@ ul {
   padding: 0;
 }
 
-/* line 103, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 117, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 ul li {
   background-color: #3E4249;
   opacity: 70%;
   margin: 10px;
 }
 
-/* line 110, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 124, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 li a {
   width: 100%;
   font-size: 1.7em;
@@ -620,19 +641,19 @@ li a {
   color: #FFFFFF;
 }
 
-/* line 116, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 130, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 a:active {
   color: #FFFFFF;
 }
 
-/* line 119, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 133, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 a:visited {
   color: #FFFFFF;
 }
 
 /*FIN CSS des liens du bas*/
 /*CSS de la signature*/
-/* line 125, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+/* line 139, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
 footer {
   color: #FFFFFF;
   position: fixed;
@@ -644,42 +665,59 @@ footer {
 /*FIN CSS de la signature*/
 /*FIN CSS du corps de la page*/
 @media (min-width: 576px) {
-  /* line 138, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 152, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav {
     background-color: red;
   }
-  /* line 140, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 154, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav .meteo {
-    display: block;
+    display: contents;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+  /* line 158, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  nav .meteo a {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  /* line 163, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  nav .meteo p:first-child {
+    margin-right: 5px;
   }
 }
 
 @media (min-width: 768px) {
-  /* line 148, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 172, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav {
     background-color: blue;
+  }
+  /* line 175, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  nav .meteo a {
+    display: flex;
+    flex-direction: row;
   }
 }
 
 @media (min-width: 992px) {
-  /* line 155, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 185, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav {
     background-color: purple;
   }
-  /* line 157, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 187, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav h1 {
     font-size: 2em;
   }
-  /* line 160, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 190, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   nav img {
     height: 60px;
     width: auto;
   }
-  /* line 166, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 196, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .container_body {
     justify-content: space-between;
   }
-  /* line 170, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 200, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux {
     float: left;
     width: 5%;
@@ -688,16 +726,16 @@ footer {
     display: block;
     margin-top: 250px;
   }
-  /* line 177, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 207, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux p {
     text-align: center;
     font-size: 1.9em;
   }
-  /* line 181, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 211, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux p:nth-child(2n) {
     display: none;
   }
-  /* line 184, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 214, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux a {
     color: #FFFFFF;
     display: flex;
@@ -707,29 +745,29 @@ footer {
     height: 50px;
     background-color: #2682C2;
   }
-  /* line 193, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 223, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux a:hover {
     background-color: #10435F;
     color: #FFFFFF;
     width: 175px;
   }
-  /* line 197, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 227, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   .reseaux_sociaux a:hover p:last-child {
     margin-left: 25px;
     display: block;
   }
-  /* line 203, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 233, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   ul {
     width: 80%;
     flex-direction: row;
     justify-content: center;
     margin: 0;
   }
-  /* line 209, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 239, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   li {
     width: 33%;
   }
-  /* line 212, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
+  /* line 242, D:/wamp64/www/MIW/CEO-Referencement/TP2/css/scss/style.scss */
   li:last-child {
     margin-right: 0;
   }
