--- a/CEO-Referencement/TP2/css/scss/style.scss
+++ b/CEO-Referencement/TP2/css/scss/style.scss
@@ -21,15 +21,19 @@ $white : #FFFFFF;
 }
 a{
  text-decoration: none;
+  color: $white;
 }
 a:hover{
   text-decoration: underline;
+  color: $white;
 }
 a:active{
   text-decoration: none;
+  color: $white;
 }
 a:visited{
   text-decoration: none;
+  color: $white;
 }
 
 
